try to fix "Punkt hinzufügen" visual bug on mobile -v8

--- a/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
@@ -13,6 +13,5 @@ button {
 }
 
 #bugapointmenu {
-  overflow: auto;
-  height: calc(100vh - 280px);
+  height: calc(100vh - 200px);
 }
